--- a/.gitignore
+++ b/.gitignore
@@ -9,19 +9,12 @@ __pycache__/
 # Ignorer les fichiers CSV volumineux
 csv-data/*.csv
 
+# Ignorer les fichiers parquet volumineux dans csv-data
+csv-data/*.parquet
+
 # Ignorer les dépendances installées
 *.log
 .DS_Store
 
-
-# Ignorer les fichiers dans csv data
-!csv-data/
-
-# Ignorer les fichiers de données volumineux
+# Ignorer les fichiers de données volumineux dans d'autres dossiers
 data/*.parquet
-
-# Ignorer les fichiers de données volumineux
-
-
-
-
